--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
       hooks:
           - id: cmake-format
 
-    - repo: git://github.com/doublify/pre-commit-clang-format
+    - repo: https://github.com/doublify/pre-commit-clang-format
       rev: 62302476d0da01515660132d76902359bed0f782
       hooks:
           - id: clang-format
