--- a/scripts/CI/yml/debug-test.yml
+++ b/scripts/CI/yml/debug-test.yml
@@ -46,6 +46,7 @@ test_optional_logging:
         - make test_optional_logging
         - ./test_optional_logging &> output
         - cat output | wc -l | grep 0
+    needs: [debug_build_gcc, debug_build_clang]
 
 debug_test_ycsb_larged:
     image: carvicsforth/arch_carv:latest
